Update audience links in header and footer
Using dev links to stage for launch.

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -86,7 +86,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://8dev.vancouver.wsu.edu/">Admissions home</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions home</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
                   <li><a href="http://8dev.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
@@ -131,13 +131,13 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Faculty/staff dropdown menu">Faculty/staff <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="http://8dev.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
                   <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
-                  <li><a href="https://admin.vancouver.wsu.edu/information-technology">Tech Support</a></li>
+                  <li><a href="http://www8dev.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
         </ul>
@@ -181,28 +181,28 @@
 <div class="footer-sitemap">
   <div class="col-md-3">
   		<ul>
- 			<li class="sitemap-section">Quick links</li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
-			<li><a href="http://admin8dev.vancouver.wsu.edu">Administration</a></li>
-			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
-			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
-			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
-      <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
+   			<li class="sitemap-section">Quick links</li>
+  			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
+  			<li><a href="http://vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
+  			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
+  			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
+  			<li><a href="http://www8dev.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
+  			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
+        <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
   		<ul>
- 			<li class="sitemap-section">Future Students</li>
-			<li><a href="http://8dev.vancouver.wsu.edu">Admissions</a></li>
-      <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
-			<li>&nbsp;</li>
-			<li class="sitemap-section">Current Students</li>
-			<li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Student Involvement</a></li>
-			<li><a href="https://studentaffairs.vancouver.wsu.edu/src">Student Resource Center</a></li>
+   			<li class="sitemap-section">Future Students</li>
+  			<li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions</a></li>
+        <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
+  			<li><a href="http://8dev.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
+  			<li>&nbsp;</li>
+  			<li class="sitemap-section">Current Students</li>
+  			<li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
+  			<li><a href="http://8dev.vancouver.wsu.edu/osi">Student Involvement</a></li>
+  			<li><a href="http://8dev.vancouver.wsu.edu/src">Student Resource Center</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
@@ -220,15 +220,15 @@
   </div>
   <div class="col-md-3">
   		<ul>
- 			<li class="sitemap-section">Academics</li>
-			<li><a href="https://cas.vancouver.wsu.edu">Arts and Sciences</a></li>
-      <li><a href="https://business.vancouver.wsu.edu">Business</a></li>
-      <li><a href="https://murrow.vancouver.wsu.edu">Communication</a></li>
-			<li><a href="https://education.vancouver.wsu.edu">Education</a></li>
-			<li><a href="https://ecs.vancouver.wsu.edu">Engineering and Computer Science</a></li>
-			<li><a href="https://hd.vancouver.wsu.edu">Human Development</a></li>
-      <li><a href="https://medicine.vancouver.wsu.edu">Medicine</a></li>
-			<li><a href="https://nursing.vancouver.wsu.edu">Nursing</a></li>
+   			<li class="sitemap-section">Academics</li>
+  			<li><a href="https://cas.vancouver.wsu.edu">Arts and Sciences</a></li>
+        <li><a href="https://business.vancouver.wsu.edu">Business</a></li>
+        <li><a href="https://murrow.vancouver.wsu.edu">Communication</a></li>
+  			<li><a href="https://education.vancouver.wsu.edu">Education</a></li>
+  			<li><a href="https://ecs.vancouver.wsu.edu">Engineering and Computer Science</a></li>
+  			<li><a href="https://hd.vancouver.wsu.edu">Human Development</a></li>
+        <li><a href="https://medicine.vancouver.wsu.edu">Medicine</a></li>
+  			<li><a href="https://nursing.vancouver.wsu.edu">Nursing</a></li>
     	</ul>
   </div>
 </div>
@@ -247,7 +247,7 @@
   </div>
   <div class="col-md-6">
 		<ul>
-      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-and-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
       <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
     </ul>
   </div>
