[minor] Footer link correction

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -184,7 +184,7 @@
    			<li class="sitemap-section">Quick links</li>
   			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
   			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
-  			<li><a href="http://vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
+  			<li><a href="http://www8dev.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
   			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
   			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
   			<li><a href="http://www8dev.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
