--- a/css/style.css
+++ b/css/style.css
@@ -6851,6 +6851,31 @@ figcaption {
   color: #981e32;
   border: 1px solid #fff; }
 
+.region-content a.btn-cougsync {
+  margin: 7px 10px 10px 0;
+  padding: 11px 20px 11px 15px;
+  box-shadow: none;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 0;
+  text-decoration: none;
+  background-color: #ee7600;
+  color: #fff;
+  border: 1px solid #ee7600;
+  transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -webkit-transition: all .2s ease-out; }
+  .region-content a.btn-cougsync img {
+    width: 25px;
+    height: 25px;
+    margin-right: 15px; }
+
+.region-content a.btn-cougsync:hover,
+.region-content a.btn-cougsync:focus {
+  background-color: black;
+  color: #fff;
+  border: 1px solid black; }
+
 .region-content a.btn-facebook {
   margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 15px;
@@ -7500,6 +7525,9 @@ form .panel-body {
   width: 8px;
   margin-bottom: 4px;
   margin-left: 2px; }
+
+.form-inline .select-wrapper {
+  height: 3.25em; }
 
 .select-wrapper {
   display: block; }
