--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -726,6 +726,34 @@ figcaption {
   border: 1px solid $white;
 }
 
+.region-content a.btn-cougsync {
+  margin: 7px 10px 10px 0;
+  padding: 11px 20px 11px 15px;
+  box-shadow: none;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 0;
+  text-decoration: none;
+  background-color: #ee7600;
+  color: $white;
+  border: 1px solid #ee7600;
+  transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -webkit-transition: all .2s ease-out;
+  img {
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+  }
+}
+
+.region-content a.btn-cougsync:hover,
+.region-content a.btn-cougsync:focus {
+  background-color: black;
+  color: $white;
+  border: 1px solid black;
+}
+
 .region-content a.btn-facebook {
   margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 15px;
@@ -1430,6 +1458,7 @@ h2.hero-title {
     margin-bottom: 2em;
   }
 }
+
 form .fieldgroup {
   margin-bottom: 1.5em;
 }
@@ -1487,6 +1516,10 @@ form .panel-body {
   width: 8px;
   margin-bottom: 4px;
   margin-left: 2px;
+}
+
+.form-inline .select-wrapper {
+  height: 3.25em;
 }
 
 .select-wrapper {
