Adjust submit button spacing on exposed views

--- a/css/style.css
+++ b/css/style.css
@@ -7115,7 +7115,7 @@ li.node-readmore,
   margin-left: -25px; }
 
 .view-filters .form-submit {
-  margin-top: -.75em;
+  margin-top: 1em;
   margin-left: 1em; }
 
 .btn-info {
