--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1073,6 +1073,10 @@ li.node-readmore,
   margin-left: 0;
 }
 
+.view-header {
+  margin-bottom: 1.5em;
+}
+
 .views-row p + h2 {
   margin-top: 0;
 }
