--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -562,6 +562,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   line-height: 1.6em;
 }
 
+.region-content p.lead {
+  margin-top: 25px;
+}
+
 .region-content a {
   color: $brand-primary;
   text-decoration: underline;
