--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -252,6 +252,15 @@
     </ul>
   </div>
 </div>
+
+<!-- CELEBRATING 30 YEARS -->
+
+<div class="footer-thirty">
+  <div class="col-md-12">
+    <img class="thirty" src="/themes/bootstrap_sass_wsuv/images/celebrating-30-years.svg" alt="Celebrating 30 Years">
+  </div>
+</div>
+
 </footer>
 
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
