--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1738,6 +1738,17 @@ table.gsc-search-box td {
   }
 }
 
+.footer-thirty .col-md-12 {
+  background-color: #981e32;
+}
+
+img.thirty {
+  width: 25%;
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
 @media (max-width: 767.98px) {
   body > div.footer-sitemap > div:nth-child(3),
   body > div.footer-sitemap > div:nth-child(4) {
@@ -1749,6 +1760,9 @@ table.gsc-search-box td {
   .footer-sitemap .col-md-3 li,
   .footer-copyright .col-md-6 li {
     display: block;
+  }
+  img.thirty {
+    width: 60%;
   }
 }
 
