Alphabetize copyright links
Rule making falls under Policies and is redundant. Link removed.

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -239,10 +239,9 @@
   <div class="col-md-6">
 	  <ul>
       <li class="copyright-section"><strong>&copy; WSU Vancouver</strong></li>
-      <li><a href="https://access.wsu.edu/">Accessibility</a></li>
-      <li><a href="https://policies.wsu.edu/">Policies</a></li>
-      <li><a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule making</a></li>
+      <li><a href="https://access.wsu.edu/">Access</a></li>
       <li><a href="https://ucomm.wsu.edu/wsu-copyright-policy/">Copyright</a></li>
+      <li><a href="https://policies.wsu.edu/">Policies</a></li>
     </ul>
   </div>
   <div class="col-md-6">
