Update template links to production server

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -62,7 +62,7 @@
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link rel="shortcut icon" href="/themes/bootstrap_sass_wsuv/images/favicon.ico" />
+    <link rel="shortcut icon" href="https://www.vancouver.wsu.edu/themes/bootstrap_sass_wsuv/images/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
     <a href="#main-content" class="visually-hidden focusable skip-link">
@@ -79,65 +79,65 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://www8dev.vancouver.wsu.edu"> <a href="http://www8dev.vancouver.wsu.edu"><img class="horizontal-logo" src="/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
+        <a class="navbar-brand" href="https://www.vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="https://www.vancouver.wsu.edu/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Admissions dropdown menu">Admissions <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions home</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions home</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/undergraduate-students">Requirements</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
                   <li><a href="https://www.applyweb.com/fixie/form/s/T7W13sd">Request info</a></li>
-                  <li><a href="http://8dev.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Students dropdown menu">Students <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z index</a></li>
-                  <li><a href="http://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
-                  <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z index</a></li>
+                  <li><a href="https://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
+                  <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Campus map</a></li>
                   <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
-                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Research dropdown menu">Research <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://www8dev.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/faculty-research-labs">Faculty research</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/research-graduate-education/resources-faculty">Research home</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/faculty-research-labs">Faculty research</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Research home</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Alumni dropdown menu">Alumni <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://www8dev.vancouver.wsu.edu/alumni">Alumni home</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/get-involved">Get involved</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/naa">Notable Alumni</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/alumni">Alumni home</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/get-involved">Get involved</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/naa">Notable Alumni</a></li>
                 </ul>
             </li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Faculty/staff dropdown menu">Faculty/staff <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="http://8dev.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
-                  <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
-                  <li><a href="http://directory.vancouver.wsu.edu">Directory</a></li>
-                  <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
+                  <li><a href="https://directory.vancouver.wsu.edu">Directory</a></li>
+                  <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a></li>
-                  <li><a href="http://www8dev.vancouver.wsu.edu/information-technology">Tech Support</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
         </ul>
@@ -158,10 +158,10 @@
 
 <div class="header-logo">
   <div class="col-sm-6 col-md-6">
-    <a href="http://www8dev.vancouver.wsu.edu"><img class="primary-logo" src="/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
+    <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
   </div>
   <div class="col-sm-6 col-md-6">
-    <a class="apply-button" href="http://8dev.vancouver.wsu.edu/admissions/apply">Apply now</a>
+    <a class="apply-button" href="https://studentaffairs.vancouver.wsu.edu/admissions/apply">Apply now</a>
   </div>
 </div>
 
@@ -182,40 +182,40 @@
   <div class="col-md-3">
   		<ul>
    			<li class="sitemap-section">Quick links</li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
   			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
   			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
   			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/events">Events Calendar</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/events">Events Calendar</a></li>
         <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
   		<ul>
    			<li class="sitemap-section">Future Students</li>
-  			<li><a href="http://8dev.vancouver.wsu.edu/admissions">Admissions</a></li>
-        <li><a href="http://8dev.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
-  			<li><a href="http://8dev.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
+        <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Majors and Programs</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/financial-aid">Student Financial Services</a></li>
   			<li>&nbsp;</li>
   			<li class="sitemap-section">Current Students</li>
-  			<li><a href="http://8dev.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
-  			<li><a href="http://8dev.vancouver.wsu.edu/osi">Student Involvement</a></li>
-  			<li><a href="http://8dev.vancouver.wsu.edu/src">Student Resource Center</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z Index</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/osi">Student Involvement</a></li>
+  			<li><a href="https://studentaffairs.vancouver.wsu.edu/src">Student Resource Center</a></li>
     	</ul>
   </div>
   <div class="col-md-3">
   		<ul>
         <li class="sitemap-section">Campus Safety</li>
-			  <li><a href="http://www8dev.vancouver.wsu.edu/parking-services">Parking Services</a></li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/public-safety">Public Safety</a></li>
-  			<li><a href="http://www8dev.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
+			  <li><a href="https://www.vancouver.wsu.edu/parking-services">Parking Services</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/public-safety">Public Safety</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/safety-plan">Safety Plan and Security Report</a></li>
         <li>&nbsp;</li>
         <li class="sitemap-section">Alumni</li>
-        <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/alumni-association">Alumni Association</a></li>
-        <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/get-involved">Get Involved</a></li>
-        <li><a href="http://www8dev.vancouver.wsu.edu/development-alumni-relations/make-gift-wsu-vancouver">Make a Gift</a></li>
+        <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/alumni-association">Alumni Association</a></li>
+        <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/get-involved">Get Involved</a></li>
+        <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/make-gift-wsu-vancouver">Make a Gift</a></li>
    		</ul>
   </div>
   <div class="col-md-3">
@@ -246,7 +246,7 @@
   </div>
   <div class="col-md-6">
 		<ul>
-      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="http://www8dev.vancouver.wsu.edu/campus-map-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-directions">14204 NE Salmon Creek Ave, Vancouver, WA, 98686</a></li>
       <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
     </ul>
   </div>
