--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -11,7 +11,7 @@
  */
 
 // Set the proper directory for the Bootstrap Glyphicon font.
-$icon-font-path: 'http://www8dev.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/';
+$icon-font-path: 'https://www.vancouver.wsu.edu/themes/bootstrap/assets/fonts/bootstrap/';
 
 // SCAFFOLDING
 
