Update footer links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -99,14 +99,15 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Students dropdown menu">Students <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/current-student-resources">A-Z index</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/current-student-resources">A-Z index</a></li>
                   <li><a href="https://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
-                  <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Campus map</a></li>
-                  <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/cougsync-update">CougSync</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
+                  <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
             </li>
             <li class="dropdown">
@@ -186,7 +187,7 @@
   			<li><a href="https://studentaffairs.vancouver.wsu.edu/access-center">Access Center</a></li>
   			<li><a href="https://www.vancouver.wsu.edu/administrative-departments">Administrative Departments</a></li>
   			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
-  			<li><a href="https://admin.vancouver.wsu.edu/human-resources/employment">Employment</a></li>
+  			<li><a href="https://www.vancouver.wsu.edu/human-resources">Employment</a></li>
   			<li><a href="https://www.vancouver.wsu.edu/equity-diversity">Equity and Diversity</a></li>
   			<li><a href="https://www.vancouver.wsu.edu/events">Events Calendar</a></li>
         <li><a href="https://wsu.edu/about/statewide/">WSU Locations</a></li>
