Update .navbar audience links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -106,6 +106,7 @@
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/cougsync-update">CougSync</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
+                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>                  
                   <li><a href="https://my.wsu.edu/">myWSU</a>
                   <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
@@ -116,6 +117,7 @@
                   <li><a href="https://www.vancouver.wsu.edu/academic-affairs">Academic Affairs</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/faculty-research-labs">Faculty research</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
+                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Research home</a></li>
                 </ul>
