Update CougSync link to Engage url

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -104,9 +104,9 @@
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
-                  <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/cougsync-update">CougSync</a></li>
+                  <li><a href="https://vancouver-wsu.campuslabs.com/engage/">CougSync</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
-                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>                  
+                  <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
                   <li><a href="https://www.vancouver.wsu.edu/information-technology">Tech Support</a></li>
                 </ul>
