Add links to audience navbar

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -103,6 +103,7 @@
                   <li><a href="https://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
                   <li><a href="https://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="http://schedules.wsu.edu">Class schedule</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/campus-map-directions">Campus map</a></li>
                   <li><a href="https://vancouver-wsu.campuslabs.com/engage/">CougSync</a></li>
                   <li><a href="https://office365.wsu.edu/">Email and Office 365</a></li>
@@ -126,6 +127,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Alumni dropdown menu">Alumni <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://www.vancouver.wsu.edu/alumni">Alumni home</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/alumni">Cougar Business Alliance</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/get-involved">Get involved</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/naa">Notable Alumni</a></li>
