Update navbar links

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -127,9 +127,11 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Alumni dropdown menu">Alumni <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://www.vancouver.wsu.edu/alumni">Alumni home</a></li>
-                  <li><a href="https://www.vancouver.wsu.edu/alumni">Cougar Business Alliance</a></li>
-                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/alumni-relations">Alumni Relations</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/cougar-business-alliance">Cougar Business Alliance</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/get-involved">Get involved</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/development-alumni-relations/giving">Give to WSU</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/nwcg">Northwest Crimson & Gray</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/naa">Notable Alumni</a></li>
                 </ul>
             </li>
