Error: Fixed duplicate link path

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -120,7 +120,7 @@
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/graduate-programs">Graduate programs</a></li>
                   <li><a href="https://library.vancouver.wsu.edu">Library</a></li>
                   <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Proposals</a></li>
-                  <li><a href="https://www.vancouver.wsu.edu/research-graduate-education/resources-faculty">Research home</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/research">Research home</a></li>
                 </ul>
             </li>
             <li class="dropdown">
