--- a/css/style.css
+++ b/css/style.css
@@ -6753,7 +6753,7 @@ figcaption {
   display: block;
   width: 50%;
   font-size: .75em;
-  margin: 0 1.5em 1em 1.5em; }
+  margin: .5em 0; }
 
 .region-content h1.page-header {
   font-size: 3em;
