--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -609,6 +609,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   margin: .5em 1.5em 1em 0;
 }
 
+figure {
+  padding-left: 5em;
+}
+
 figcaption {
   float: right;
   clear: right;
