--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -92,7 +92,7 @@
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/tuition-and-affordability">Tuition</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/financial-aid">Financial aid</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/student-life">Student life</a></li>
-                  <li><a href="https://www.applyweb.com/fixie/form/s/T7W13sd">Request info</a></li>
+                  <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/request-information">Request info</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/visit-us">Visit us</a></li>
                 </ul>
             </li>
