--- a/css/style.css
+++ b/css/style.css
@@ -6725,7 +6725,8 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-content img.full {
   width: 100%;
   margin: 0;
-  padding-bottom: 1em; }
+  padding-bottom: 1em;
+  padding-top: .5em; }
 
 .region-content img.float-right {
   float: right;
