--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -583,6 +583,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   width: 100%;
   margin: 0;
   padding-bottom: 1em;
+  padding-top: .5em;
 }
 
 .region-content img.float-right {
