--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -39,6 +39,10 @@ h1.hero {
   text-shadow: 1px 1px 1px black;
 }
 
+a > strong {
+  color: $brand-primary;
+}
+
 table {
   padding-bottom: 1em;
 }
