--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -568,6 +568,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 
 .region-content p.lead {
   margin-top: 25px;
+  line-height: 1.4em
 }
 
 .region-content a {
